fix: nav item alignment

--- a/apps/mitchs-website/src/app/pages/caving-page.component.scss
+++ b/apps/mitchs-website/src/app/pages/caving-page.component.scss
@@ -1,3 +1,11 @@
+.cave-nav {
+  display: flex;
+  background-color: var(--clr-bg-secondary);
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+}
+
 .float {
   position: absolute;
   text-align: center;
